fixing 404 errors on images + removing enjoytheweb references + z-index alertcontainer + removing contentwrapper on webappdesc page

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -450,6 +450,7 @@ h1, h2, h3, h4, h5{
 #alertContainer{
   position: fixed;
   top: 90px;
+  z-index: 9000;
 }
 
 #alveolesList{
